small-bug-in-user-schema-ran-a-bit-of-static-analysis
